@@ -9,16 +9,16 @@
 	</comment>
 				
 	<!-- directory to store temporary files in -->
-	<entry key="dmfc.tempDir">/tmp</entry>	
+	<entry key="dmfc.tempDir">c:\\temp</entry>	
 
 	<!-- Path to LAME --> 
-	<entry key="dmfc.lame.path">/usr/local/bin/lame</entry>	
+	<entry key="dmfc.lame.path">d:\\lame\\lame.exe</entry>	
 
 	<!-- Path to Python installation --> 
-	<entry key="pipeline.python.path">/usr/bin/python</entry>
+	<entry key="pipeline.python.path">C:\Program\Python25\python.exe</entry>
 		
 	<!-- Path to ImageMagick converter installation --> 
-	<entry key="pipeline.imageMagick.converter.path">/usr/local/bin/convert</entry>
+	<entry key="pipeline.imageMagick.converter.path">C:\\Program\\ImageMagick-6.3.4-Q16\\convert.exe</entry>
 	
 	<!-- Path to sox (Sound eXchange - used on Mac OS X only) --> 
 	<entry key="pipeline.sox.path">/usr/local/bin/sox</entry> 
